added model saving and loading

--- a/U_Net_model.ipynb
+++ b/U_Net_model.ipynb
@@ -8,12 +8,11 @@
         "gkiNA_q3vevq",
         "NGwWJ04KvraC",
         "lHt0nYBjE9hl",
-        "ILcsBxvbLVE8",
-        "85m3ekgrZkEM",
-        "LkuwRQxleErp"
+        "OmOl6AivfaXE",
+        "ILcsBxvbLVE8"
       ],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOKWskeS/qD8emdkKFbcuEK"
+      "authorship_tag": "ABX9TyO37V3qxwz+jF3Zf4vcXP+C"
     },
     "kernelspec": {
       "name": "python3",
@@ -2238,7 +2237,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 262
+          "height": 0
         },
         "id": "MFcAWtmEB26C",
         "outputId": "93823f70-3d56-49c3-e9bc-a724afa8f485"
@@ -2556,6 +2555,7 @@
     {
       "cell_type": "code",
       "source": [
+        "model_path = '/content/drive/My Drive/Building_Analytics_CV/U_Net_model/model'\n",
         "EPOCHS = 50\n",
         "\n",
         "model = buildUNetModel()\n",
@@ -2563,7 +2563,9 @@
         "hist = model.fit(train_data,\n",
         "                 validation_data=test_data,\n",
         "                 epochs=EPOCHS,\n",
-        "                 callbacks=[PlotLossesCallback()])"
+        "                 callbacks=[PlotLossesCallback()])\n",
+        "\n",
+        "model.save(model_path)"
       ],
       "metadata": {
         "colab": {
@@ -2603,28 +2605,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Save weights"
-      ],
-      "metadata": {
-        "id": "85m3ekgrZkEM"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "weights_path = '/content/drive/My Drive/Building_Analytics_CV/U_Net_model/model'\n",
-        "model.save_weights(weights_path)"
-      ],
-      "metadata": {
-        "id": "CsgiYt2RZqYf"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##Load weights"
+        "##Load model"
       ],
       "metadata": {
         "id": "LkuwRQxleErp"
@@ -2633,9 +2614,8 @@
     {
       "cell_type": "code",
       "source": [
-        "weights_path = '/content/drive/My Drive/Building_Analytics_CV/U_Net_model/model'\n",
-        "model = buildUNetModel()\n",
-        "model.load_weights(weights_path)"
+        "model_path = '/content/drive/My Drive/Building_Analytics_CV/U_Net_model/model'\n",
+        "model = tf.keras.saving.load_model(model_path)"
       ],
       "metadata": {
         "id": "pSmuCrR1eI9s",
